// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 1rem;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-Stack fp-FieldStack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;

exports[`composition hook should return with FieldStack props 1`] = `
Object {
  "className": "css-fvskbx css-1vaxa0h css-4lfl7m css-1yuzjtp fp-Box fp-Stack fp-FieldStack",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 1rem;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-Stack fp-FieldStack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-7 {
  color: #574feb !important;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-7 test fp-Box fp-Stack fp-FieldStack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 1rem;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-Stack fp-FieldStack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-7 {
  color: #574feb !important;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-7 fp-Box fp-Stack fp-FieldStack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;

exports[`props should render correctly with orientation prop 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width:768px) {
  .emotion-5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .emotion-5 > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-5 > *:not(:last-child) {
    margin-right: 1rem;
  }
}

@media screen and (max-width:768px) {
  .emotion-5.emotion-5 > *:not(:last-child) {
    margin-bottom: 1rem;
  }
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-Stack fp-FieldStack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;

exports[`props should render correctly with spacing prop 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-Stack fp-FieldStack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;

exports[`theming FieldStack.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-4.emotion-4 {
  background-color: #ff0000;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-Stack fp-FieldStack"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;
